borsh-derive/src/internals/attributes/snapshots/borsh_derive__internals__attributes__field__tests__bounds_parsing1.snap
---
source: borsh-derive/src/internals/attributes/field.rs
expression: debug_print_vec_of_tokenizable(attrs.serialize)
---
K : Hash + Eq + Ord
V : Ord

