borsh-derive/src/internals/attributes/snapshots/borsh_derive__internals__attributes__field__tests__bounds_parsing_error3.snap
---
source: borsh-derive/src/internals/attributes/field.rs
expression: err
---
Error(
    "expected borsh bound attribute to be a string: `deserialize = \"...\"`",
)
