borsh-derive/src/internals/attributes/snapshots/borsh_derive__internals__attributes__field__tests__root_bounds_and_params_combined.snap
---
source: borsh-derive/src/internals/attributes/field.rs
expression: debug_print_vec_of_tokenizable(bounds.deserialize)
---
K : Hash

