borsh-derive/src/internals/attributes/snapshots/borsh_derive__internals__attributes__field__tests__root_bounds_and_wrong_key_combined.snap
---
source: borsh-derive/src/internals/attributes/field.rs
expression: err
---
Error(
    "malformed borsh attribute, expected `borsh(bound(...), deserialize_with = ..., schema(...), serialize_with = ...)`",
)
