borsh-derive/src/internals/attributes/snapshots/borsh_derive__internals__attributes__field__tests__schema_params_parsing1.snap
---
source: borsh-derive/src/internals/attributes/field.rs
expression: debug_print_vec_of_tokenizable(schema_attrs.unwrap().params)
---
T => < T as TraitName > :: Associated

